fixed bug with selects overlapping content

--- a/src/scss/partials/_dropdown.scss
+++ b/src/scss/partials/_dropdown.scss
@@ -1,6 +1,10 @@
 
 .dropdown {
     position: relative;
+
+    @media screen and(max-width: 1024px) {
+       pointer-events: none;
+     }
     
     .dropdown__list {   
         list-style-type: none;
@@ -65,7 +69,7 @@
 
     .nav__link {
         @media screen and(max-width: 1024px) {
-            pointer-events: none;
+            pointer-events: all;
          }
         
     }
