--- a/src/scss/partials/_page.scss
+++ b/src/scss/partials/_page.scss
@@ -2,7 +2,7 @@
     padding: 50px 0;
 
     @media screen and (max-width: 768px) {
-        padding: 30px 0;
+        padding: 15px 0;
     }
 
     .descr__title {
@@ -21,6 +21,7 @@
 
         @media screen and (max-width: 767px) {
             width: 100%;
+            margin-bottom: 15px;
         }
     }
 
@@ -33,6 +34,17 @@
             @media screen and (max-width: 767px) {
                 width: 100%;
                 order: -1;
+
+                
+            }
+        }
+
+        &.about {
+            padding-top: 30px;
+
+            @media screen and (max-width: 767px) {
+                padding-top: 30px;    
+                
             }
         }
 
